--- a/package.json
+++ b/package.json
@@ -10,38 +10,39 @@
     "preview": "bunx --bun vite preview"
   },
   "dependencies": {
-    "@codemirror/lang-markdown": "^6.2.3",
+    "@codemirror/lang-markdown": "^6.3.2",
     "@codemirror/theme-one-dark": "^6.1.2",
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
-    "@uiw/codemirror-theme-github": "^4.21.21",
+    "@uiw/codemirror-theme-github": "^4.23.12",
     "@uiw/codemirror-themes-all": "^4.23.12",
-    "@uiw/react-codemirror": "^4.21.21",
+    "@uiw/react-codemirror": "^4.23.12",
     "clsx": "^2.1.1",
-    "marked": "^11.1.1",
+    "markdown-img-code-display": "file:",
+    "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.6",
-    "zustand": "^4.4.7"
+    "tailwindcss": "^4.1.8",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.322",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/chrome": "^0.0.325",
+    "@types/node": "^22.15.27",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
+    "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "postcss": "^8.5.4",
     "rollup-plugin-copy": "^3.5.0",
-    "postcss": "^8.5.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
